add JVM arg